Cross Origin Dockerfile

--- a/src/main/resources/application-deploy.properties
+++ b/src/main/resources/application-deploy.properties
@@ -1,5 +1,6 @@
 spring.application.name=entrevalles
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.url=jdbc:postgresql://dpg-cp51sn21hbls73f8kh70-a.frankfurt-postgres.render.com:5432/entrevalles
 spring.datasource.username=root
 spring.datasource.password=4uwAzSZ6u0eLcnTqBTahmmnrI32K4nPA
