--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				 <configuration>
+                <profiles>
+                    <profile>dev</profile>
+                    <profile>deploy</profile>
+                </profiles>
+            </configuration>
 			</plugin>
 		</plugins>
 	</build>
